Notebook - Display checked and total count of checklist items